[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/structures/structure_palmtree_coconut.png" type="Texture" id=1]
[ext_resource path="res://src/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 10.198

[sub_resource type="CircleShape2D" id=2]
radius = 18.1108

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, -2 )
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width = 2.0

[node name="NavigationAgent2D" type="Node" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2( -2, -2 )
shape = SubResource( 2 )

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_knockback_over"]
